docs: :memo: add create and signin swagger
